--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,17 @@ body{
 .heading{
     text-align: center;
 }
+
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 20px;
+}
+
+.player{
+    width: 100%;
+    height: 300px;
+    border: 1px solid black;
+    border-radius: 5px;
+}
