--- a/styles.css
+++ b/styles.css
@@ -17,12 +17,55 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 20px;
+    padding: 20px 100px;
 }
 
 .player{
     width: 100%;
     height: 300px;
-    border: 1px solid black;
+    border: 2px solid black;
     border-radius: 5px;
+    margin-top: 20px;
+}
+
+.menu{
+    width: 100%;
+    background-color: black;
+    border-bottom: 2px solid  rgb(33, 40, 22);
+    overflow: hidden;
+    position: relative;
+}
+
+.menu ul{
+    width: 300%;
+    list-style: none;
+    font-size: 1.5rem;
+    overflow: hidden;
+}
+.menu ul li{
+    display: inline-block;
+    text-align: center;
+    background-color: black;
+    color: white;
+    padding: 5px 10px;
+    margin: 0;
+    cursor: pointer;
+}
+.menu ul li:hover{
+    background-color: white;
+    color: black;
+}
+.menu .next, .menu .prev{
+    position: absolute;
+    top: 0;
+    background-color: black;
+    color: white;
+    font-size: 2rem;
+}
+
+.menu .next{
+    right: 0;
+}
+.menu .prev{
+    left: 0    ;
 }
