--- a/styles.css
+++ b/styles.css
@@ -206,6 +206,7 @@ body{
     display: none;
     font-size: 30px;
     cursor: pointer;
+    position: relative;
 }
 
 .duration{
@@ -253,6 +254,14 @@ body{
     border-radius: 50%;
     background: black;
     cursor: pointer;
+}
+
+.array-size-select{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    opacity: 0;
+    left: 0;
 }
 
 
@@ -332,7 +341,11 @@ body{
         width: 100%;
     }
   }
-
+@media only screen and (min-width: 601px){
+    .menu-items ul li{
+        width: initial;
+    }
+}
 @media (hover: none){
     .menu-btn:hover{
         background-color: black;
